# swcviz

./: .gitignore  README.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
.windsurf/rules/: workspace.md
data/points/: TS2_AZ.txt
data/swc/: TS2_s10.swc  TS2_s50.swc
docs/: api.md  index.md  install.md  visualization.md
notebooks/: demo.ipynb  io_test.ipynb
swcviz/: __init__.py  config.py  geometry.py  io.py  model.py  viz.py
swcviz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_geometry.py  test_io.py  test_model.py
