[project]
name = "swcviz"
version = "0.1.0"
description = "Jupyter-first 3D visualization of SWC neuronal morphologies using NetworkX and Plotly."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Jordan M. R. Fox", email = "jordanmrfox@gmail.com" }
]
keywords = ["SWC", "neuroscience", "visualization", "plotly", "networkx", "3D"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "networkx>=3.5",
    "numpy>=2.3.3",
    "plotly>=6.3.0",
]

[project.urls]
Homepage = "https://github.com/jmrfox/swcviz"
"Bug Tracker" = "https://github.com/jmrfox/swcviz/issues"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "build>=1.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "twine>=6.2.0",
]

[tool.hatch.build]
include = [
    "swcviz/**",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["swcviz"]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "twine>=5.1.1",
    "pytest>=8.4.2",
    "ruff>=0.6.9",
    "black>=24.10.0",
]
